# AutoGrader

./: .gitignore  IMPROVEMENTS.md  Makefile  README.md  README_SETUP.md  docker-compose.yaml  pyproject.toml  schema.uxf  try.sh
.github/workflows/: tests.yml
App/: Dockerfile  app.py  classification_ev.py  classification_train.py  embeddings.py  virtualize_env.py
App/Config/: Config.py
App/Evaluation/: Evaluator.py  LLMClient.py  Rag.py  RubricGenerator.py
App/PostEvaluation/: MailSender.py
App/PreEvaluation/: CodeClassifier.py  CodeCleanner.py  FileLoader.py  prueba_pre_evaluator.py
App/RagTests/: get_data_from_pdf.py  queries.py
App/Sandbox/: Sandbox.py
App/Utils/: utils.py
App/resources/: rubric.json  rubrics.json
App/test/python/: ref_dynamic.py
backend/: Dockerfile  requirements.txt
backend/AutoGrader/: db.sqlite3
backend/AutoGrader/AutoGrader/: settings.py  urls.py
backend/AutoGrader/grader/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
backend/AutoGrader/grader/migrations/: 0004_task_created_at_task_user.py  0005_taskresult.py  0006_remove_task_state_task_error_message_task_status_and_more.py  0007_codeexample_codeexamplefile.py
backend/AutoGrader/grader/templates/tasks/: task_create.html
fastapi_app/: Dockerfile  main.py  prueba.py  schemas.py  worker.py
fastapi_app/services/: System.py  logging_config.py  processing.py  rag_service.py  utils.py
fastapi_app/services/Config/: Config.py  settings.py
fastapi_app/services/Evaluation/: Evaluator.py  LLMClient.py  Rag.py  RubricGenerator.py
fastapi_app/services/PostEvaluation/: Analysis.py  MailSender.py
fastapi_app/services/PreEvaluation/: CodeClassifier.py  CodeCleanner.py  FileLoader.py
fastapi_app/services/Sandbox/: Sandbox.py
fastapi_app/services/resources/: chroma.sqlite3
fastapi_app/tests/: __init__.py  conftest.py  test_endpoints.py  test_system.py  test_utils.py
